[tool.poetry]
name = "influp"
version = "0.1.0"
description = ""
authors = ["Viet Nguyen <me@tuanviet.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.1"

[tool.poetry.scripts]
influp = "influp.influp:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
